# calibrate-ibm

./: .gitignore  README.md  all_counts_boston.pkl  all_counts_fez_dd_sep25.pkl  circuit  diagonalize.py  echo_test.ipynb  hchain_qem.ipynb  monomer_eqb.hdf5  owp_circuit.qasm_counts_ibm_boston_2025_11_13_20:42:39  owp_circuit.qasm_counts_ibm_boston_2025_11_14_12:33:21  owp_counts_aer_simulator_from(ibm_kingston).pkl  owp_counts_ibm_kingston_2.pkl  owp_ibm.ipynb  requirements.txt  setup.py  validate_grouping.py  validation_and_benchmarks.ipynb  water_ibm.ipynb  water_sqd_ibm.ipynb
Hamiltonians/: load_h2o.py  load_owp.py
circuits/: po3_1w-22o_product.qasm  (+2 more)
compilation/: main.py  pyproject.toml
compilation/compiled/all_to_all/bqskit/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiled/all_to_all/pytket/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiled/all_to_all/qiskit/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiled/heavy_hex/bqskit/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiled/heavy_hex/pytket/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiled/heavy_hex/qiskit/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiled/heavy_hex/qiskit_direct/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
compilation/compiler_workflows/: bqskit_compile.py  cirq_compile.py  pytket_compile.py  qiskit_compile.py
compilation/to_compile/: owp_circuit.qasm  owp_circuit_2.qasm  owp_circuit_3.qasm
(+20212 files in other folders)
